applications/prd/wefood-realtime-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wefood-realtime-server-prd
  labels:
    app: wefood-realtime-server
    environment: production
