applications/prd/wefood-realtime-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wefood-realtime-server
  namespace: wefood-realtime-server-prd
  labels:
    app: wefood-realtime-server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wefood-realtime-server
  template:
    metadata:
      labels:
        app: wefood-realtime-server
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: wefood-realtime-server-keyvault-env
      containers:
      - name: wefood-realtime-server
        image: ghcr.io/wedigitek/wefood-realtime-server:rc
        imagePullPolicy: Always
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/keyvault-env
          readOnly: true
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
