applications/prd/wefood-realtime-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wefood-realtime-server
  namespace: wefood-realtime-server-prd
  labels:
    app: wefood-realtime-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: wefood-realtime-server
