applications/prd/wefood-realtime-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wefood-realtime-server
  namespace: wefood-realtime-server-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - orders.trywefood.dev
    secretName: wefood-realtime-server-tls

  rules:
  - host: orders.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wefood-realtime-server
            port:
              number: 80
